...
                                if (!withGoogle)
                                  LoginProviderCard(
                                    onTap: () => context
                                        .read(authRepositoryProvider)
                                        .connectWithGoogle(context),
                                    providerIcon: FontAwesomeIcons.google,
                                    providerName: 'Google',
                                    isSignedIn: isSignedIn,
                                  ),
                                if (!withFacebook)
                                  LoginProviderCard(
                                    onTap: () => context
                                        .read(authRepositoryProvider)
...
                                if (!withApple && Platform.isIOS)
                                  LoginProviderCard(
                                    // todo: implement
                                    onTap: () =>
                                        showNotImplementedMessage(context),
                                    providerIcon: FontAwesomeIcons.apple,
                                    providerName: 'Apple',
                                    isSignedIn: isSignedIn,
                                  ),
                                SizedBox(
                                  height: 20,
                                ),
                              ],
...
