{
  "headlines": "Headlines",
  "subscriptions": "Subscriptions",
  "saved_news": "Saved news",
  "account_in_use": "Account already in use",
  "account_in_use_message": "This account is already connected to another user. If you want to sign in with this account, you need to sign out first.",
  "sign_out": "Sign out",
  "dismiss": "Dismiss",
  "signed_out_message": "You've been signed out",
  "unexpected_error_message": "An unexpected error has occurred. Please try again later or connect with another account.",
  "connected_message": "You've been connected with {}",
  "profile": "Profile",
  "sign_in_out": "Sign in/out",
  "not_signed_in": "Not signed in",
  "connected_with": "Connected with",
  "or": "or",
  "notification_settings": "Notification settings",
  "language_region": "Language and region",
  "select_locale": "Select your language and region for viewing news",
  "locale_changed_message": "Your language and region have been changed",
  "subscribed_message": "Added to subscriptions",
  "unsubscribed_message": "Removed from subscriptions",
  "search": "Search",
  "search_text": "Search for topics, places and sources",
  "no_subscriptions": "You have no subscriptions",
  "connect_with": "Connect with {}",
  "sign_in_with": "Sign in with {}",
  "no_news_found": "No news found",
  "piece_not_found": "This news piece was not found",
  "source_not_found": "This news source was not found",
  "share": "Share",
  "go_to_page": "Go to page \"{}\"",
  "save": "Save",
  "remove": "Remove from saved news",
  "saved_message": "Added to saved news",
  "unsaved_message": "Removed from saved news",
  "enter_search_query": "Please enter a search query",
  "not_implemented_message": "Not implemented yet"
}
